# frdm-env-monitor

./: .gitignore  CMakeLists.txt  README.md  prj.conf  uart_logger.py
boards/: frdm_mcxn947.overlay  frdm_mcxn947_mcxn947_cpu0.overlay
include/: sensor_data.h
src/: main.c  sensor_data.c  task_alert.c  task_bme680.c  task_lis3dh.c  task_p3t1755.c  task_reporter.c  task_touch.c
